# IEOS2023

./: CITATION.cff  LICENSE  README.md  pyproject.toml  requirements.txt
ieos2023/: 0_Getting_started_with_ python.ipynb  0_Getting_started_with_python.ipynb  1_Data_Types.ipynb  2_The_Python_Language.ipynb  3_Vector_data.ipynb  4_Raster_data.ipynb  Untitled.ipynb
sample_data/: bus_journey.gpx  osm.feather
