[tool.poetry]
name = "ieos2023"
version = "0.1.0"
description = ""
authors = ["bamacgabhann <b.macgabhann@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
rasterio = "^1.3.9"
pyproj = "^3.6.1"
pandas = "^2.1.3"
geopandas = "^0.14.1"
movingpandas = "^0.17.2"
cartopy = "^0.22.0"
fiona = "^1.9.5"
numpy = "^1.26.2"
eomaps = "^7.3.1"
pyogrio = "^0.7.2"
pyarrow = "^14.0.1"
osmnx = "^1.7.1"
folium = "^0.15.0"


[tool.poetry.group.dev.dependencies]
black = "^23.11.0"
flake8 = "^6.1.0"
ipykernel = "^6.26.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
